<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_Mode" Id="{7c7fcc45-b232-46e3-8cf4-1c88552056ba}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Mode :
(
	Auto,
	Manual 
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>