<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="input" Id="{30183586-730f-44ce-b8b2-e2e4380625b4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bEnableSwitch : BOOL;
	bModeSwitch : BOOL;
	bStartSwitch : BOOL;	
	










END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>