<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="MAIN" Id="{137cafa2-2b3c-4fcc-93f3-1db729ff8b9d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	eStatus : E_CRANE_STATUS;
	eMode : E_Mode;
	aEndStopMessages : ARRAY[0..2] OF STRING := ['END STOP NOT ACTIVE' , 'PISTON HAS REACHED UPPER END STOP', 'PISTON HAS REACHED LOWER END STOP'];
	sEndStopMessage : STRING;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF input.bEnableSwitch = FALSE THEN
output.bRunningLight := FALSE;
input.bStartSwitch := FALSE;
output.rCylinderVel := 0;
eStatus := E_Crane_Status.Unnabled;
END_IF



// Status message on HMI
IF input.bEnableSwitch = TRUE AND input.bStartSwitch = FALSE THEN
	eStatus := E_Crane_Status.Ready;
END_IF





IF input.bStartSwitch = FALSE THEN
	output.bRunningLight := FALSE;
	parameter.rRunTime := 0;
ELSIF input.bStartSwitch = TRUE THEN
	output.bRunningLight := TRUE;
	parameter.rRunTime := parameter.rRunTime + parameter.rCycleTime;
	eStatus := E_Crane_Status.Running;
END_IF





// Mode display on HMI
IF input.bModeSwitch = TRUE THEN
	eMode := E_mode.Auto;
ELSE
	eMode := E_Mode.Manual;
END_IF


// Set new max stroke
IF input.bSetNewMaxStrokeSwitch = TRUE THEN
	parameter.stStrokeRange.rCylinderStrokeMax :=Set_New_Max_Stroke(rNewMaxStroke := input.rSetInputMaxStroke);
	

input.bSetNewMaxStrokeSwitch := FALSE;
END_IF




// ENDSTOP MESSAGE
IF output.rCylinderPos >= parameter.stStrokeRange.rCylinderStrokeMax THEN
	sEndStopMessage := aEndStopMessages[1];
ELSIF output.rCylinderPos <= parameter.stStrokeRange.rCylinderStrokeMin THEN
	sEndstopMessage := aEndStopMessages[2];
ELSE
		sEndStopMessage := aEndStopMessages[0];
END_IF




// Manual Mode
IF input.bStartSwitch = TRUE AND input.bModeSwitch = FALSE THEN
	parameter.rAutoTime := 0;
	output.rCylinderPos := parameter.rRefCylinderPos;
END_IF




// AUTOMODE
IF input.bStartSwitch = TRUE
AND input.bModeSwitch = TRUE
THEN

	parameter.rInitialStrokePosition := parameter.rRefCylinderPos;
	
	// If stroke is maxed out:
	IF output.rCylinderPos >= parameter.stStrokeRange.rCylinderStrokeMax AND parameter.rRefCylinderVel > 0 THEN
		parameter.rAutoTime := 0;
		output.rCylinderVel := 0;
		
	
	// If piston is at bottom position:
	ELSIF output.rCylinderPos <= parameter.stStrokeRange.rCylinderStrokeMin AND parameter.rRefCylinderVel < 0 THEN
		parameter.rAutoTime := 0;
		output.rCylinderVel := 0;
		
	
	// When piston is between max and min:
	ELSE
		parameter.rAutoTime := parameter.rAutoTime + parameter.rCycleTime;
		output.rCylinderVel := parameter.rRefCylinderVel;
	
	END_IF
	
	output.rCylinderPos := parameter.rInitialStrokePosition + output.rCylinderVel * parameter.rAutoTime;
	parameter.rRefCylinderPos := output.rCylinderPos;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="22" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="122" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="92" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="118" Count="3" />
      <LineId Id="19" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="33" Count="1" />
      <LineId Id="79" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="123" Count="3" />
      <LineId Id="112" Count="3" />
      <LineId Id="106" Count="0" />
      <LineId Id="167" Count="1" />
      <LineId Id="173" Count="0" />
      <LineId Id="182" Count="0" />
      <LineId Id="184" Count="0" />
      <LineId Id="187" Count="1" />
      <LineId Id="186" Count="0" />
      <LineId Id="185" Count="0" />
      <LineId Id="174" Count="1" />
      <LineId Id="100" Count="0" />
      <LineId Id="151" Count="2" />
      <LineId Id="156" Count="1" />
      <LineId Id="154" Count="0" />
      <LineId Id="158" Count="1" />
      <LineId Id="155" Count="0" />
      <LineId Id="127" Count="2" />
      <LineId Id="131" Count="1" />
      <LineId Id="30" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="95" Count="2" />
      <LineId Id="62" Count="1" />
      <LineId Id="40" Count="2" />
      <LineId Id="144" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="51" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="56" Count="1" />
      <LineId Id="148" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="74" Count="1" />
      <LineId Id="149" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="37" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>